2019-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a stackoverflow tag to indicate where to ask questions,
	also updated package counts on CRAN and BioC for Rcpp users

2019-08-06  Riccardo Porreca  <riccardo.porreca@mirai-solutions.com>

	* vignettes/Rcpp-modules.Rmd: Extensive review and edit improving the
	Modules vignette

2019-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add thre doi badges

	* inst/NEWS.Rd: Two minor edits
	
2019-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-07-21  Riccardo Porreca  <riccardo.porreca@mirai-solutions.com>

	* R/Module.R: Use an explicit Rcpp:: in the initalize method for C++
	classes wrapped inside modules to ensure proper initialization

2019-07-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 1.0.2

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * inst/bib/Rcpp.bib: Idem
        * vignettes/Rcpp.bib: Idem

2019-07-18  Pierrick Roger  <pk.roger@icloud.com>

	* src/attributes.cpp: Correct parsing of default function values
	* inst/unitTests/cpp/attributes.cpp: Added tests
	* inst/unitTests/runit.attributes.R: Idem
	
2019-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* debian/: Removed, see https://salsa.debian.org/edd/r-base/ instead

2019-07-04  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp.bib: Updated
	* inst/bib/Rcpp.bib: Idem

2019-05-05  Dirk Eddelbuettel  <edd@debian.org>

	* .Rbuildignore: Small tweak
	
2019-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* R/Rcpp.package.skeleton.R (Rcpp.package.skeleton): Use getRcppVersion()

2019-04-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/tools.R (getRcppVersion): More idiomatic code

2019-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* R/tools.R (getRcppVersion): Export R (and dev) package version
	* man/getRcppVersion.Rd: Documentation for new function
