@@ -1,3 +1,9 @@
+2019-09-30  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp.h: add RCPP_NO_MODULES
+	* inst/include/Rcpp/api/meat/is.h: Idem
+	* inst/include/Rcpp/api/meat/meat.h: Idem
+
 2019-09-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add a stackoverflow tag to indicate where to ask questions,
